objects/vlocity_cmt__ContractVersion__c.object
<CustomObject>
    <description>Represents an online version of a contract document. A contract document can have physical files attached to it such as Word files or PDF files.</description>
    <fields>
        <fullName>vlocity_cmt__ContainsRedlines__c</fullName>
        <description>Indicates whether this contract document version contains redlines</description>
        <formula>If( vlocity_cmt__CountOfContainsRedlines__c&gt;0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contains Redlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <description>Contract document version</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Contract_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractStatus__c</fullName>
        <description>Contract Status</description>
        <formula>TEXT(vlocity_cmt__ContractId__r.Status)</formula>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractType__c</fullName>
        <description>Contract type</description>
        <formula>vlocity_cmt__ContractId__r.vlocity_cmt__ContractType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountOfContainsRedlines__c</fullName>
        <description>Total count of sections that contain redlines in the document version</description>
        <label>Count Of Contains Redlines</label>
        <summaryFilterItems>
            <field>vlocity_cmt__ContractSection__c.vlocity_cmt__ContainsRedlines__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__ContractSection__c.vlocity_cmt__ContractVersionId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountOfDocuSignDocument__c</fullName>
        <description>Count of documents</description>
        <label>Number of DocuSign Document</label>
        <summaryForeignKey>vlocity_cmt__ContractEnvelope__c.vlocity_cmt__ContractVersionId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountOfNonStandardSection__c</fullName>
        <description>Count of non standard sections</description>
        <label>Non Standard Count</label>
        <summaryFilterItems>
            <field>vlocity_cmt__ContractSection__c.vlocity_cmt__IsSectionNonStandard__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__ContractSection__c.vlocity_cmt__ContractVersionId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountOfPendingDocument__c</fullName>
        <description>Count of pending documents</description>
        <label>Number of Pending Document</label>
        <summaryFilterItems>
            <field>vlocity_cmt__ContractEnvelope__c.vlocity_cmt__Status__c</field>
            <operation>equals</operation>
            <value>sent, delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__ContractEnvelope__c.vlocity_cmt__ContractVersionId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreatorName__c</fullName>
        <description>Creator name</description>
        <formula>CreatedBy.FirstName &amp; &apos; &apos;&amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentCreationSource__c</fullName>
        <description>Indicates how the document version was created</description>
        <label>Document Creation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customize</fullName>
                </value>
                <value>
                    <fullName>Generate</fullName>
                    <default>true</default>
                    <label>Generate</label>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentLockedReason__c</fullName>
        <description>Reason why the document version is locked</description>
        <label>Document Locked Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentLockedUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User ID of user who locked this version</description>
        <label>Document Locked User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentLockedUserName__c</fullName>
        <description>User name of user who locked this version</description>
        <formula>vlocity_cmt__DocumentLockedUserId__r.FirstName &amp; &quot; &quot; &amp; vlocity_cmt__DocumentLockedUserId__r.LastName</formula>
        <label>Locked By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document Template Identifier</description>
        <label>Document Template</label>
        <referenceTo>vlocity_cmt__DocumentTemplate__c</referenceTo>
        <relationshipLabel>Contract Documents</relationshipLabel>
        <relationshipName>Contract_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentTemplateName__c</fullName>
        <description>Document Template Name</description>
        <formula>vlocity_cmt__DocumentTemplateId__r.Name</formula>
        <label>Document Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentTemplateVersion__c</fullName>
        <description>Document Template Version</description>
        <formula>vlocity_cmt__DocumentTemplateId__r.vlocity_cmt__VersionNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Template Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HasDocumentSignaturePending__c</fullName>
        <description>Indicates whether document has any signatures pending</description>
        <formula>If(vlocity_cmt__CountOfDocuSignDocument__c !=0, If( vlocity_cmt__CountOfPendingDocument__c=0, false, true), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Document Signature Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsCurrentUserLockedDocument__c</fullName>
        <description>Indicates whether the current accessing the document has locked the document</description>
        <formula>if($User.Id== vlocity_cmt__DocumentLockedUserId__c, true, false)</formula>
        <label>Is Current User Locked Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDocumentLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the document is locked</description>
        <label>Is Document Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNewTemplateVersionAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a newer version of the template than used for generating the document is available</description>
        <label>New Template Version Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentCountOfContractVersion__c</fullName>
        <description>Internally used formula field to help generate a new contract version number</description>
        <formula>vlocity_cmt__ContractId__r.vlocity_cmt__CountofContractVersion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Count Of Contract Document</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Contract document version status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackContractRedlines__c</fullName>
        <description>Document version status - active or inactive</description>
        <formula>vlocity_cmt__DocumentTemplateId__r.vlocity_cmt__TrackContractRedlines__c</formula>
        <label>Track Contract Redlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Contract document type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionNumber__c</fullName>
        <description>Contract document version number</description>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>